@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: imap4.cc,v $
-// Revision      : $Revision: 1.88 $
-// Revision date : $Date: 2005/01/03 16:17:27 $
+// Revision      : $Revision: 1.89 $
+// Revision date : $Date: 2005/01/03 16:55:34 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -129,7 +129,7 @@ Imap4::start (void)
 		// Catch all errors that are un-recoverable and result in
 		// closing the connection, and resetting the mailbox status.
 #if DEBUG
-		g_message("[%d] Imap exception: %s", uin_, err.what());
+		g_warning ("[%d] Imap exception: %s", uin_, err.what());
 #endif
 		status_ = MAILBOX_ERROR;
 		unread_.clear ();
