@@ -64,6 +64,7 @@ Version 2.1.1
    - Source code for class Imap4 is fully documented now
    - Bugfix: Printing debug messages for sent lines (IMAP4 & POP3)
    - Feature: Allow the user to forbid idling (no GUI support ATM; IMAP4)
+   - Added exception handling to POP3
 
 Version 2.1.0
  * Nicolas Rougier
